[package]
name = "onebrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.9.1"
crossbeam-channel = "0.5.12"
fast-float = "0.2.0"
hashbrown = "0.14.3"
threadpool = "1.8.1"

[profile.release]
debug = true
